--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "dev": "NODE_ENV=development webpack --progress",
     "watch": "NODE_ENV=development webpack --watch --progress",
     "css": "WEBPACK_CHILD=css npm run build",
-    "lint": "eslint client/src && yarn lint-sass",
+    "lint": "yarn lint-js && yarn lint-sass",
     "lint-js": "eslint client/src",
     "lint-js-fix": "eslint client/src --fix",
-    "lint-sass": "stylelint **/client/src/**/*.scss",
+    "lint-sass": "stylelint client/src",
     "test": "echo 1 > /dev/null"
   },
   "dependencies": {
@@ -33,7 +33,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@silverstripe/eslint-config": "^1.2.1",
+    "@silverstripe/eslint-config": "^1.3.0",
     "@silverstripe/webpack-config": "^2.1.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^5.0.0"
