Allow users to share draft files to non members

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -2,6 +2,9 @@
 Name: sharedraftcontent
 After: framework/routes#coreroutes
 ---
+SilverStripe\Assets\File:
+  extensions:
+    - SilverStripe\ShareDraftContent\Extensions\ShareDraftContentSiteTreeExtension
 SilverStripe\CMS\Model\SiteTree:
   extensions:
     - SilverStripe\ShareDraftContent\Extensions\ShareDraftContentSiteTreeExtension
